--- a/index.html
+++ b/index.html
@@ -9,8 +9,28 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="buttons">
+            <button class="selection scissors"
+                value="Scissors">Scissors</button>
+            <button class="selection paper" value="Paper">Paper</button>
+            <button class="selection stone" value="Stone">Stone</button>
+        </div>
+
+        <div class="overview">
+            <div class="result"></div>
+            <div class="card player">
+                <div class="player-selection"></div>
+                <div class="player-score"></div>
+            </div>
+            <div class="card computer">
+                <div class="computer-selection"></div>
+                <div class="computer-score"></div>
+            </div>
+        </div>
+    </div>
+
     <script src="javascript.js"></script>
-    hi
 </body>
 
 </html>
